[package]
name = "explorerust"
version = "0.1.0"
authors = ["Amit Thapa <amithapa1994@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "explorerust"

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["rt", "macros"] }
config = "0.13.2"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.22"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
once_cell = "1.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.0"
tracing-opentelemetry = "0.18.0"
opentelemetry = "0.18.0"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
